#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-01-01
2020-12-11 Mikhail S. Dubrovin
- propagate npix_min=10, apply cm corr by mask only
	modified:   src/UtilsCommonMode.py
	modified:   src/UtilsEpix10ka.py
	modified:   src/UtilsJungfrau.py
	modified:   app/epix10ka_images
	modified:   app/jungfrau_images

Tag: V01-00-99
2020-12-10 Mikhail S. Dubrovin
- implement full scale common mode correction for Jungfrau and epix10ka detectors
	modified:   src/AreaDetector.py
	modified:   src/UtilsCommonMode.py
	modified:   src/UtilsEpix10ka.py
	modified:   src/UtilsJungfrau.py
	modified:   app/det_images
	new file:   app/epix10ka_images
	modified:   examples/ex_epix10ka_cmod.py
	modified:   examples/ex_epix10ka_cmod_direct_test.py
	new file:   examples/ex_epix10ka_config_barebones.py
	modified:   examples/ex_epix10ka_ipython.py
	modified:   examples/ex_jungfrau_images.py
	new file:   examples/test-2020-12-04-iris-polarization-corr.py

Tag: V01-00-98
2020-10-15 Mikhail S. Dubrovin
- app/det_calib_ave_and_max - add calib derectory parameter
- app/det_calib_maxed - deleted

Tag: V01-00-97
2020-10-01 Mikhail S. Dubrovin
- add -G option to plot charge injection graphics for specified pixel
	modified:   app/epix10ka_offset_calibration
	modified:   src/UtilsEpix10kaCalib.py

Tag: V01-00-96
2020-09-22 Mikhail S. Dubrovin
- for Chuck add parameter fract to point_indexes
- add old test*.py to examples
- add app/det_calib_ave_and_max
	modified:   src/AreaDetector.py
	modified:   src/PyDetectorAccess.py
	new file:   app/det_calib_ave_and_max
	new file:   examples/test-2018-06-12-pnccd-xanthe-changed.py
	new file:   examples/test-2018-11-29-epix10ka2m-shapes.py
	new file:   examples/test-2019-04-05-jungfrau-shape.py